# insurance-calibration

./: .gitignore  README.md  ic_test_notebook.py  pyproject.toml  run_databricks_tests.py  run_databricks_tests_v2.py
.github/workflows/: tests.yml
notebooks/: demo_calibration_workflow.py  run_tests.py
src/insurance_calibration/: __init__.py  _rectify.py
tests/: test_autocalibration.py  test_balance.py  test_deviance.py  test_murphy.py  test_rectify.py  test_report.py
